--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -574,7 +574,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -632,6 +633,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "\n",
     "> <p style='text-align: justify;'>\n",
     "Zmiana kształtu zmiennych przechowujących stany wynika z implementacji kerasa. Żeby dane zostały poprawnie \n",
     "zinterpretowane należy umieścić je w zagnieżdżonych listach.\n",
@@ -672,16 +674,19 @@
   {
    "cell_type": "markdown",
    "source": [
+    "\n",
     "### Wnioski\n",
     "<p style='text-align: justify;'>\n",
-    "Liczbowe wyniki agenta z prostą siecią neuronową są znacznie gorsze od wyników agenta naiwnego. Po dogłębnej analizie\n",
-    "wydarzeń oraz zapisu wideo można zauważyć, że agent rzeczywiście początkowo skupia się na eksploracji otoczenia\n",
+    "Liczbowe wyniki agenta z prostą siecią neuronową są znacznie gorsze od wyników agenta naiwnego. Po analizie wydarzeń oraz \n",
+    "zapisu wideo można zauważyć, że agent rzeczywiście początkowo skupia się na eksploracji otoczenia\n",
     "uruchamiając silniki w przypadkowej kolejności. Niemniej jednak wraz z upływem kolejnych prób i zmniejszania się \n",
     "współczynnika eksploracji, zaczyna podejmować najlepsze (według niego) decyzje, czyli po prostu opadać w dół. \n",
-    "Poniekąd jest to racjonalna decyzja, bo właśnie na tym polega Lunar Lander, jednake agent nie nauczył się zwracać \n",
-    "uwagi na te mniej oczywiste czynniki wspomagające sukcec, takie jak stabilizacja lotu czy niezbaczanie z pionowej\n",
-    "trajektorii lotu.\n",
-    "</p>\n"
+    "Poniekąd jest to racjonalna decyzja, bo właśnie na tym polega Lunar Lander, jednakże agent nie nauczył się zwracać \n",
+    "uwagi na te mniej oczywiste czynniki wspomagające sukcec, takie jak stabilizacja statku czy niezbaczanie z pionowej\n",
+    "trajektorii lotu. Wygląda na to, że model bardzo szybko wpadał w minimum lokalne. Mogło się tak stać, ponieważ po pewnym czasie \n",
+    "ustaliliśmy wartość współczynnika eksploracji na 0, więc agent nie miał szansy odkryć niczego nowego.\n",
+    "</p>\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -691,11 +696,11 @@
    "cell_type": "markdown",
    "source": [
     "<p style='text-align: justify;'>\n",
-    "Wynika to z faktu, że kształt i parametry naszej sieci neuronowej nie są zbyt dobrze dobrane. Przede wszystkim \n",
-    "liniowa funkcja aktywacji dla obu warstw to marnowanie potencjału wynikającego ze stosowania sieci neuronowej. \n",
+    "Ponadto na ten efekt złożył się też fakt, że kształt i parametry naszej sieci neuronowej nie są zbyt dobrze dobrane. \n",
+    "Przede wszystkim liniowa funkcja aktywacji dla obu warstw to marnowanie potencjału wynikającego ze stosowania sieci neuronowej. \n",
     "Jeśli dana warstwa neuronów używa liniowej funkcji aktywacji do określenia pobudzenia poszczególnych neuronów, a \n",
-    "następnie przekazuje je jako impulsz do kolejnej warstwy pobudzanej liniowo, to na końcu nie otrzymujemy niczego innego \n",
-    "niż po prostu pewną funkcję liniową określoną na podstawie wartości wejść. To oznacza, że wszystkie znajdujące się\n",
+    "następnie przekazuje je jako impuls do kolejnej warstwy pobudzanej liniowo, to na końcu nie otrzymujemy niczego innego \n",
+    "niż po prostu pewną funkcję liniową określoną na podstawie wartości wejść pierwszej. To oznacza, że wszystkie znajdujące się\n",
     "obok siebie warstwy z liniową funkcją aktywacji mogą po prostu zostać zamienione w jedną warstwę. Innym problemem funkcji\n",
     "liniowej jest to, że w miarę dotrenowywania jej wartości na wyjściu mogą zmierzać do nieskończoności, aż w pewnym\n",
     "momencie przepełnić stos i być interpretowane jako <i>NaN</i>.\n"
@@ -722,6 +727,21 @@
   {
    "cell_type": "markdown",
    "source": [
+    "<p style='text-align: justify;'>\n",
+    "Poza tym jeśli spojrzymy na metody wykorzystywane przez  DQN, to też nie są one bez wad. Na przykład wewnątrz\n",
+    "metody replay w trakcie przewidywania wartości dla następnego stanu i wpisywania jej do obecnego, nie skalujemy \n",
+    "jej w żaden sposób.  To oznacza, że bezgranicznie wierzymy naszemu modelowi, że skutecznie przewiduje ruch, który\n",
+    "należy wykonać, chociaż w cale tak nie jest. Również w tej samej metodzie w trakcie trenowania na stanach, które\n",
+    "nie są stanami kończącymi grę, nie bierzemy pod uwagę zdobytych przez nie nagród.\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "<center><img src=\"https://media.giphy.com/media/JtM8dLWsjSVWYnvMWT/giphy.gif\" width=\"460\" height=\"280\" /></center>\n"
    ],
    "metadata": {
@@ -736,10 +756,307 @@
    "source": [
     "## Agent DQN v1\n",
     "<p style='text-align: justify;'>\n",
-    "\n"
+    "Biorąc pod uwagę wnioski, które wyciągnęliśmy z poprzedniego model, zdecydowaliśmy się na wykonanie następujących\n",
+    "czynności:\n",
+    "</p>\n",
+    "\n",
+    "1. Dodanie współczynnika niepewności <b>_discount_rate</b> wobec przewidzianego wyniku oraz uwzględnienie otrzymanej \n",
+    "nagrody w każym przypadku.\n",
+    "2. Rezygnacja z zerowania wartości współczynnika uczenia po osiągnięciu progu 0.1.\n",
+    "3. Zmiana funkcji aktywacji pierwszej warstwy na relu ze względu na jej charakterystykę - dla wartości mniejszych od \n",
+    "zera zwraca 0, dzięki czemu istnieje duże prawdopodobieństwo, że część neuronów nie zostanie pobudzona, \n",
+    "co sprawi, że sieć neuronowa będzie działała szybciej, a w naszym przypadku jest to bardzo duża zaleta. Niemniej jednak\n",
+    "wciąż mógłby pojawić się problem z wartościami na wyjściu zmierzającymi do nieskończoności, więc zdecydowaliśmy się \n",
+    "dodać ukrytą warstwę z sigmoidalną funkcją aktywacji, która zwraca wartości od 0 do 1, a więc skutecznie przeskaluje wyniki.\n",
+    "4. Zmiana funkcji optymalizacji na ADAM, która usprawnia scholastyczny algorytm gradientu o dodanie wartości pędu, co \n",
+    "pozwala na unikanie minimów lokalnych. Działa to zupełnie jak w fizyce - jeśli kula toczy się w dół zbocza i na drodze \n",
+    "napotka kamień, to mimo wszystko będzie w stanie się po nim przetoczyć dzięki nabranemu wcześniej pędowi, więc ominie \n",
+    "swoje minimum lokalne. \n"
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import gym\n",
+    "import numpy as np\n",
+    "from collections import deque\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras.optimizers import Adam\n",
+    "import tensorflow as tf"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class SimpleDqnNpcV2:\n",
+    "    \"Klasa implementująca agenta DQN opartego o prostą sieć neuronową\"\n",
+    "\n",
+    "    def __init__(self, num_of_inputs, num_of_outputs):\n",
+    "        \"\"\"\n",
+    "        num_of_inputs - długość wektora będącego wejściem dla sieci neuronowej\n",
+    "        num_of_outputs - ilość wyjść z sieci neuronowej\n",
+    "        \"\"\"\n",
+    "\n",
+    "        self._num_of_inputs = num_of_inputs\n",
+    "        self._num_of_outputs = num_of_outputs\n",
+    "        self._exploration_rate = 1.0\n",
+    "        self._exploration_rate_min = 0.1\n",
+    "        self._exploration_rate_decay = 0.997\n",
+    "        self._discout_rate = 0.95\n",
+    "        self.memory = deque(maxlen=1024)\n",
+    "        self._init_model()\n",
+    "\n",
+    "    def _init_model(self):\n",
+    "        \"\"\"\n",
+    "        Inicjalizuje model sieci neuronowej.\n",
+    "        Wybraliśmy (w naszym mniemaniu) najproszte parametry i kształt.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        self._model = Sequential()\n",
+    "        self._model.add(Dense(self._num_of_inputs, input_dim=self._num_of_inputs, activation='relu'))\n",
+    "        self._model.add(Dense(self._num_of_inputs * 2, activation='sigmoid'))\n",
+    "        self._model.add(Dense(self._num_of_outputs, activation='linear'))\n",
+    "        self._model.compile(optimizer=Adam(), loss='mean_squared_error')\n",
+    "\n",
+    "    def act(self, state):\n",
+    "        \"\"\"Przewiduje i zwraca akcję, którą należy wykonać\"\"\"\n",
+    "\n",
+    "        if np.random.rand() <= self._exploration_rate:\n",
+    "            return random.randrange(self._num_of_outputs)\n",
+    "        act_values = self._model.predict(state)\n",
+    "        return np.argmax(act_values[0])\n",
+    "\n",
+    "    def retain(self, current_state, taken_action, gained_reward, next_state, is_done):\n",
+    "        \"\"\"Zapisuje dyn przypadku w pamięci agenta\"\"\"\n",
+    "\n",
+    "        self.memory.append((current_state, taken_action, gained_reward, next_state, is_done))\n",
+    "\n",
+    "    def replay(self, batch_size):\n",
+    "        \"\"\"\n",
+    "        Doszkala sieć neuronową na losowym fragmencie z jego pamięci\n",
+    "        batch-size - rozmiar fragmentu pamięci\n",
+    "        \"\"\"\n",
+    "\n",
+    "        batch = random.sample(self.memory, batch_size)\n",
+    "        for current_state, taken_action, gained_reward, next_state, is_done in batch:\n",
+    "            next_act_best_profit = gained_reward\n",
+    "            if not is_done:\n",
+    "                future_act_profits = self._model.predict(next_state)\n",
+    "                next_act_best_profit = gained_reward + self._discout_rate * np.amax(future_act_profits[0])\n",
+    "            current_act_profits = self._model.predict(current_state)\n",
+    "            current_act_profits[0][taken_action] = gained_reward + self._discout_rate * next_act_best_profit\n",
+    "            with tf.device('/device:GPU:0'):\n",
+    "                self._model.fit(x=current_state, y=current_act_profits, epochs=1, verbose=0)\n",
+    "        if self._exploration_rate > self._exploration_rate_min:\n",
+    "            self._exploration_rate *= self._exploration_rate_decay\n",
+    "\n",
+    "    def load(self, model_path):\n",
+    "        \"\"\"Wczytuje model z pamięci\"\"\"\n",
+    "\n",
+    "        self._model.load_weights(model_path)\n",
+    "\n",
+    "    def save(self, model_path):\n",
+    "        \"\"\"Zapisuje modele do pamięci\"\"\"\n",
+    "\n",
+    "        self._model.save_weights(model_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "NUM_OF_AGENTS = 4\n",
+    "NUM_OF_EPISODES = 200\n",
+    "FRAMES_PER_EPISODE = 1000\n",
+    "BATCH_SIZE = 16\n",
+    "GAME_ID = \"LunarLander-v2\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "game = gym.make(GAME_ID)\n",
+    "num_of_actions = game.action_space.n\n",
+    "observation_size = game.observation_space.shape[0]\n",
+    "npc = SimpleDqnNpcV2(observation_size, num_of_actions)\n",
+    "is_done = False\n",
+    "avgs = []"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for model in range(NUM_OF_AGENTS):\n",
+    "    scores = []\n",
+    "    for episode in range(NUM_OF_EPISODES):\n",
+    "        score = 0\n",
+    "        current_state = np.reshape(game.reset(), [1, observation_size])\n",
+    "        for frame in range(FRAMES_PER_EPISODE):\n",
+    "            # game.render()\n",
+    "            action = npc.act(current_state)\n",
+    "            new_state, gained_reward, is_done, info = game.step(action)\n",
+    "            new_state = np.reshape(new_state, [1, observation_size])\n",
+    "            npc.retain(current_state, action, gained_reward, new_state, is_done)\n",
+    "            score += gained_reward\n",
+    "            current_state = new_state\n",
+    "            if len(npc.memory) > BATCH_SIZE:\n",
+    "                npc.replay(BATCH_SIZE)\n",
+    "            if is_done:\n",
+    "                print(\"episode: {0}/{1}; result: {2}; e: {3} used memory: {4}/{5}\"\n",
+    "                      .format(episode, NUM_OF_EPISODES, score, npc._exploration_rate, len(npc.memory), npc.memory.maxlen))\n",
+    "                break\n",
+    "        scores.append(score)\n",
+    "        if not is_done:\n",
+    "            print(\"episode: {0}/{1}; result: {2}; used memory: {3}/{4}\"\n",
+    "                  .format(episode, NUM_OF_EPISODES, score, len(npc.memory), npc.memory.maxlen))\n",
+    "    npc.save(\"simple_dqn_\" + str(model) + \".h5\")\n",
+    "    avgs.append(sum(scores) / len(scores))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for i, avg in enumerate(avgs):\n",
+    "    print(\"Model {} has avarage: {}\".format(i, avg))\n",
+    "print(\"Overall avg: {}\".format(sum(avgs) / len(avgs)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "### Wnioski\n",
+    "<p style='text-align: justify;'>\n",
+    "Tym razem wyniki agenta w liczbach prezentują się już nieco lepiej, ale prawdziwy progres można zauważyć po \n",
+    "przejrzeniu nagrań wideo. Przez około pierwsze 70 gier agent wyraźnie próbuje utrzymać trajektorię lotu w taki \n",
+    "sposób, aby kolizja z podłożem miała miejsce dokładnie na lądowisku:\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<center><img src=\"https://media.giphy.com/media/lMmU1KaTjXng9A0FwU/giphy.gif\" width=\"460\" height=\"280\" /></center>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<p style='text-align: justify;'>\n",
+    "Po rozegraniu około 130 gier agent zaczął wypracowywać technikę bujania się w lewo i w prawo, aby następnie bezpiecznie \n",
+    "wylądować, co z resztą wielokrotnie mu się udawało (niestety nie na lądowisku):\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<center><img src=\"https://media.giphy.com/media/h8gyc0yDFqyOuByJbg/giphy.gif\" width=\"460\" height=\"280\" /></center>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<p style='text-align: justify;'>\n",
+    "Gdy agent osiągnął próg blisko 160 gier, zaniechał wszelkich prób lądowania i zaczął jedynie utrzymywać się nieruchomo w \n",
+    "powietrzu:\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<center><img src=\"https://media.giphy.com/media/eHjjykEz8b481BjHN9/giphy.gif\" width=\"460\" height=\"280\" /></center>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Stwierdziliśmy, że może to być efekt przetrenowania i postanowiliśmy przyjrzeć się temu podczas tworzenia kolejnego \n",
+    "modelu.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   }
  ],
