--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -1405,8 +1405,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "6. Finalnie model nauczył się lądować i w ciągu ostatnich 20 gier wylądował aż trzykrotnie zdobywając kolejno\n",
-    "40, 20 oraz 80 punktów na plusie. Poniżej prezentujemy to najlepsze lądowanie:\n",
+    "6. Finalnie model nauczył się lądować i w ciągu ostatnich 15 gier wylądował aż trzykrotnie zdobywając kolejno\n",
+    "65, 43 oraz 88(!) punktów na plusie. Poniżej prezentujemy to najlepsze lądowanie:\n",
     "<center><img src=\"videos\\v3_5.gif\" width=\"460\" height=\"280\" /></center>\n"
    ],
    "metadata": {
@@ -1418,12 +1418,30 @@
    "source": [
     "### Posłowie\n",
     "<p style='text-align: justify;'>\n",
-    "Naszym planem na dalsze usprawnienie sieci neuronowej było przeanalizowanie wag wszystkich połączeń \n",
-    "aby wykryć te, których wartości są bliskie zera. Jendakże zadanie to byłoby niezwykle \n",
-    "czasochłonne, więc zdecydowaliśmy się zakończyć prace nad siecią na tym etapie, \n",
-    "aby przeprowadzić eksperyment z algorytmem genetycznym.\n",
+    "Uważamy, że dalsze trenowanie tego modelu (na przykład na 400 grach lub z większym batch_size) sprawiłoby, \n",
+    "że agent znacząco zwiększyłby częstotliwość udanych lądowań i ilość zdobywanych punktów na plusie. Niemniej jednak \n",
+    "wciąż widzimy aspekty sieci, które można by było ulepszyć. Szczególnie warto byłoby przeanalizować wagi wszystkich\n",
+    "połączeń międzyneuronowych i wykryć te, których wartości są bliskie zera, a następnie je usunąć. Jendakże zadanie \n",
+    "to jest niezwykle czasochłonne, więc zdecydowaliśmy się zakończyć prace nad siecią na tym etapie, aby przeprowadzić\n",
+    "eksperyment z algorytmem genetycznym.\n",
     "</p>\n",
-    "\n"
+    "\n",
+    "***\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Modyfikowanie ewolucyjne\n",
+    "\n",
+    "<p style='text-align: justify;'>\n",
+    "</p>"
    ],
    "metadata": {
     "collapsed": false,
