--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -1254,7 +1254,7 @@
     "            if is_done:\n",
     "                break\n",
     "        scores.append(score)\n",
-    "        npc.save(\"simple_dqn_\" + str(model) + \".h5\")\n",
+    "        npc.save(\"dqn_v3_\" + str(model) + \".h5\")\n",
     "    avgs.append(sum(scores) / len(scores))"
    ],
    "metadata": {
@@ -1441,7 +1441,136 @@
     "### Modyfikowanie ewolucyjne\n",
     "\n",
     "<p style='text-align: justify;'>\n",
-    "</p>"
+    "Zgodnie z tym, co napisaliśmy w pierwszym rozdziale, następna faza będzie poświęcona próbie genetycznego \n",
+    "ulepszania naszego modelu. W tym celu stworzymy populację początkową złożoną z 4 osobników (dokładnie tych \n",
+    "wytrenowanych w poprzednim rozdziale), a następnie będziemy poddawać ich operacjom genetycznym przez kolejne \n",
+    "20 pokoleń. Selekcji osobników będziemy dokonywać na podstawie średniego wyniku z 10 rozegranych przez nich \n",
+    "gier. Dwóch z najlepszym wynikiem będzie poddanych krzyżowaniu a ich potomek  finalnie zastąpi osobnika z \n",
+    "najgorszym przystosowaniem. Samo krzyżowanie będzie wielopunktowe, tzn. punkty będą znajdować się pomiędzy \n",
+    "warstwami sieci neuronowej. Celowo pomijamy mutację, ponieważ nie chcemy wprowadzać czynnika losowości \n",
+    "spoza populacji wytrenowanych już modeli - naszym celem jest stworzenie jednego supermodelu z już istniejących.\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "NUM_OF_AGENTS = 4\n",
+    "NUM_OF_EPISODES = 30\n",
+    "FRAMES_PER_EPISODE = 1000\n",
+    "GAME_ID = \"LunarLander-v2\"\n",
+    "NUM_OF_GENERATIONS = 50"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "game = gym.make(GAME_ID)\n",
+    "num_of_actions = game.action_space.n\n",
+    "observation_size = game.observation_space.shape[0]\n",
+    "npcs = []\n",
+    "is_done = False"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for i in range(NUM_OF_AGENTS): # Wczytywanie poprzednio wytenowanych agentów\n",
+    "    npcs.append(SimpleDqnNpcV3(observation_size, num_of_actions))\n",
+    "    npcs[i].load(\"dqn_v3_{}.h5\".format(i))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for gen in range(NUM_OF_GENERATIONS): # Iterowanie po kolejnych pokoleniach\n",
+    "    avgs = []\n",
+    "    for model in range(NUM_OF_AGENTS):\n",
+    "        scores = []\n",
+    "        for episode in range(NUM_OF_EPISODES):\n",
+    "            score = 0\n",
+    "            current_state = np.reshape(game.reset(), [1, observation_size])\n",
+    "            for frame in range(FRAMES_PER_EPISODE):\n",
+    "                # game.render()\n",
+    "                action = npcs[model].act(current_state)\n",
+    "                new_state, gained_reward, is_done, info = game.step(action)\n",
+    "                new_state = np.reshape(new_state, [1, observation_size])\n",
+    "                score += gained_reward\n",
+    "                current_state = new_state\n",
+    "                if is_done:\n",
+    "                    break\n",
+    "            scores.append(score)\n",
+    "        avgs.append(sum(scores) / len(scores))\n",
+    "    print(\"Avarages in generation {} are as follow: {}\".format(gen, avgs))\n",
+    "\n",
+    "    if gen != (NUM_OF_GENERATIONS - 1):\n",
+    "        avgs = np.array(avgs) # Konwersja aby użyć argsort\n",
+    "        parents_idx = (-avgs).argsort()[:2] # wyłuskanie indeksów dwóch najlepszych osobników\n",
+    "\n",
+    "        parent1_weights = npcs[parents_idx[0]]._model.get_weights()\n",
+    "        parent2_weights = npcs[parents_idx[1]]._model.get_weights()\n",
+    "        new_weights = parent1_weights # domyślnie nowy osobnik ma wagi jednego z rodziców\n",
+    "        i = 0\n",
+    "        while i < len(new_weights)/2: \n",
+    "            if np.random.rand() < 0.5: # 50% szans na użycie każej z wag od drugiego rodzica\n",
+    "                new_weights[i] = parent2_weights[i]\n",
+    "                new_weights[i + 1] = parent2_weights[i + 1]\n",
+    "            i+=2 # Iteracja co dwa, żeby bias został zamieniony razem z warstwą wag\n",
+    "        worst_agent_idx = np.argmin(avgs)\n",
+    "        npcs[worst_agent_idx]._model.set_weights(new_weights)\n",
+    "\n",
+    "print(\"Avarage of super agent is: {}\".format(np.amax(avgs)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Wnioski\n",
+    "Powyższy algorytm uruchamialiśmy blisko 20 razy. Wyniki przez niego osiągane nie były jednostajne - \n",
+    "czasami \"super agent\" rzeczywiście okazywał się być lepszy od pokolenia początkowe, ale czasami \n",
+    "również okazywał się być gorszy. Niemniej jednak nie można jednoznacznie stwierdzić, że eksperyment się \n",
+    "nie udał. Tego stanu doszukujemy się w fakcie, że populacja początkowa agentów nie była należycie wyszkolona.\n",
+    "Ze względu na brak mocy obliczeniowej mogliśmy wytrenować ją jedynie na 200 grach(co zajęło około 10 godzin). \n",
+    "Uważamy, że cały proces trenowania na osiągnietych przez nas modelach byłby wart powtórzenia na komputerze \n",
+    "przeznaczonym do trenowania sztucznej inteligencji."
    ],
    "metadata": {
     "collapsed": false,
