--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -1444,7 +1444,7 @@
     "Zgodnie z tym, co napisaliśmy w pierwszym rozdziale, następna faza będzie poświęcona próbie genetycznego \n",
     "ulepszania naszego modelu. W tym celu stworzymy populację początkową złożoną z 4 osobników (dokładnie tych \n",
     "wytrenowanych w poprzednim rozdziale), a następnie będziemy poddawać ich operacjom genetycznym przez kolejne \n",
-    "20 pokoleń. Selekcji osobników będziemy dokonywać na podstawie średniego wyniku z 10 rozegranych przez nich \n",
+    "10 pokoleń. Selekcji osobników będziemy dokonywać na podstawie średniego wyniku ze 100 rozegranych przez nich \n",
     "gier. Dwóch z najlepszym wynikiem będzie poddanych krzyżowaniu a ich potomek  finalnie zastąpi osobnika z \n",
     "najgorszym przystosowaniem. Samo krzyżowanie będzie wielopunktowe, tzn. punkty będą znajdować się pomiędzy \n",
     "warstwami sieci neuronowej. Celowo pomijamy mutację, ponieważ nie chcemy wprowadzać czynnika losowości \n",
@@ -1464,10 +1464,10 @@
    "outputs": [],
    "source": [
     "NUM_OF_AGENTS = 4\n",
-    "NUM_OF_EPISODES = 30\n",
+    "NUM_OF_EPISODES = 100\n",
     "FRAMES_PER_EPISODE = 1000\n",
     "GAME_ID = \"LunarLander-v2\"\n",
-    "NUM_OF_GENERATIONS = 50"
+    "NUM_OF_GENERATIONS = 10"
    ],
    "metadata": {
     "collapsed": false,
@@ -1513,7 +1513,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avarages in generation 0 are as follow: [-124.64240248063675, -114.82042276989276, -133.2907719575668, -128.36162353362363]\n",
+      "Avarages in generation 1 are as follow: [-123.60796836357403, -119.4550665161313, -127.93694636110956, -135.8011129251189]\n",
+      "Avarages in generation 2 are as follow: [-129.4517476236412, -130.79088393926858, -127.57640360562345, -130.88072809707285]\n",
+      "Avarages in generation 3 are as follow: [-127.1061448153883, -133.32297811958378, -134.13472404213215, -135.97211595463986]\n",
+      "Avarages in generation 4 are as follow: [-123.7671509542177, -112.28081909034074, -129.78815861097468, -125.23874543159474]\n",
+      "Avarages in generation 5 are as follow: [-130.90703924137065, -129.72648208861906, -132.0589606656378, -126.05747993295762]\n",
+      "Avarages in generation 6 are as follow: [-132.86087022501007, -128.13201900127234, -125.60027452978585, -130.54609215642756]\n",
+      "Avarages in generation 7 are as follow: [-122.59342712049047, -119.2832606158492, -130.5382207395716, -125.67126584748414]\n",
+      "Avarages in generation 8 are as follow: [-128.3903022863628, -116.03254074046617, -113.52815299390625, -139.24280975600794]\n",
+      "Avarages in generation 9 are as follow: [-125.2643229008758, -128.68397316593348, -127.67312605596646, -117.86025583039657]\n",
+      "Avarage of super agent is: -117.86025583039657\n"
+     ]
+    }
+   ],
    "source": [
     "for gen in range(NUM_OF_GENERATIONS): # Iterowanie po kolejnych pokoleniach\n",
     "    avgs = []\n",
@@ -1535,7 +1553,7 @@
     "        avgs.append(sum(scores) / len(scores))\n",
     "    print(\"Avarages in generation {} are as follow: {}\".format(gen, avgs))\n",
     "\n",
-    "    if gen != (NUM_OF_GENERATIONS - 1):\n",
+    "    if gen != (NUM_OF_GENERATIONS - 1): # dla ostatniej generacji nie ma potrzeby krzyżowania\n",
     "        avgs = np.array(avgs) # Konwersja aby użyć argsort\n",
     "        parents_idx = (-avgs).argsort()[:2] # wyłuskanie indeksów dwóch najlepszych osobników\n",
     "\n",
@@ -1545,8 +1563,8 @@
     "        i = 0\n",
     "        while i < len(new_weights)/2: \n",
     "            if np.random.rand() < 0.5: # 50% szans na użycie każej z wag od drugiego rodzica\n",
-    "                new_weights[i] = parent2_weights[i]\n",
-    "                new_weights[i + 1] = parent2_weights[i + 1]\n",
+    "                new_weights[i] = parent2_weights[i] # zamiana warstwy wag\n",
+    "                new_weights[i + 1] = parent2_weights[i + 1] # zamiana biasu\n",
     "            i+=2 # Iteracja co dwa, żeby bias został zamieniony razem z warstwą wag\n",
     "        worst_agent_idx = np.argmin(avgs)\n",
     "        npcs[worst_agent_idx]._model.set_weights(new_weights)\n",
@@ -1564,13 +1582,23 @@
    "cell_type": "markdown",
    "source": [
     "### Wnioski\n",
-    "Powyższy algorytm uruchamialiśmy blisko 20 razy. Wyniki przez niego osiągane nie były jednostajne - \n",
-    "czasami \"super agent\" rzeczywiście okazywał się być lepszy od pokolenia początkowe, ale czasami \n",
-    "również okazywał się być gorszy. Niemniej jednak nie można jednoznacznie stwierdzić, że eksperyment się \n",
-    "nie udał. Tego stanu doszukujemy się w fakcie, że populacja początkowa agentów nie była należycie wyszkolona.\n",
-    "Ze względu na brak mocy obliczeniowej mogliśmy wytrenować ją jedynie na 200 grach(co zajęło około 10 godzin). \n",
+    "<p style='text-align: justify;'>\n",
+    "Powyższy algorytm uruchamialiśmy dokładnie 50 razy. Wyniki przez niego osiągane nie były jednostajne - \n",
+    "Dokłądnie w 55 % przypadków \"super agent\" rzeczywiście okazywał się być lepszy od pokolenia początkowego, \n",
+    "a w pozostałych okazywał się być gorszy(jak chociażby powyżej). Próbowaliśmy przeanalizować proces, w jakim \n",
+    "zmieniają się wyniki osiągane przez kolejne pokolenia, niemniej jednak nie byliśmy w stanie doszukać się żadnej\n",
+    "reguły. \n",
+    "</p>\n",
+    "\n",
+    "<p style='text-align: justify;'>\n",
+    "Ciężko jest jednoznacznie stwierdzić, czy eksperyment jest udany. Jego porażki, czy też niepewnego sukcesu, \n",
+    "doszukujemy się w tym, że osobniki z populacji początkowej nie były należycie wyszkolone. Ze względu na brak \n",
+    "mocy obliczeniowej mogliśmy trenować ich jedynie na 200 grach (co i tak zajęło niebagatelne 10 godzin). \n",
     "Uważamy, że cały proces trenowania na osiągnietych przez nas modelach byłby wart powtórzenia na komputerze \n",
-    "przeznaczonym do trenowania sztucznej inteligencji."
+    "przeznaczonym do trenowania sztucznej inteligencji.\n",
+    "\n",
+    "\n",
+    "Dziękujemy za uwagę!"
    ],
    "metadata": {
     "collapsed": false,
